bordercore/static/scss/_base.scss
/* ... */
.hoverable {
  border-radius: var(--border-radius2);

  &:hover {
    background-color: var(--hover-bg);
  }
}

.list-delete {
  display: none;
  color: var(--text1);

  &:hover {
    transform: scale(1.1);

    @extend .close-button;
  }
}

.fader::after {
  position: absolute;
  z-index: 10000;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 4em;
  background-image: linear-gradient(to bottom, var(--surface2-transparent), var(--surface2) 90%);
  content: "";
  pointer-events: none;
}

.toast-wrapper {
  z-index: 100;
  line-height: 1.5rem;

  .toast-header {
    background-color: var(--surface6);
    color: var(--text1);

    button {
      color: var(--text1);
    }
  }

  .toast-body {
    background-color: var(--surface1);
  }

  &.danger {
    .toast-header {
      background-color: $danger;
      color: $black;
      strong {
        color: $black;
      }
    }
    .toast-body {
      background: tint-color($danger, 50%);
      color: $black;
      a {
        color: $danger;
      }
    }
  }

  &.warning {
    .toast-header {
      background-color: $warning;
      color: $black;
    }
  }
}

input.form-control,
select.form-control,
textarea.form-control {
  border: 0.06rem solid var(--surface1);
  background-color: var(--form-bg);
  color: var(--form-color) !important;

  &:hover {
    border-color: var(--form-border-color-hover);
  }

  &:focus {
    border-color: var(--form-border-color-hover);
    background-color: var(--form-bg-focus);
    color: var(--text4);
  }

  &:disabled {
    border: none;
    background-color: var(--form-bg-disabled);

    &:hover {
      cursor: not-allowed;
    }
  }
}

.input-group-text {
  border: 0.06rem solid var(--surface6);
  background-color: var(--surface6);
  border-radius: var(--border-radius1);
  color: var(--text1);
}

.tag, .ti-input .ti-tag {
  padding: 0 0.3rem 0.18rem 0.3rem !important;
  border: 0.12rem solid var(--surface5);
  margin: 0 0.12rem 0 0.12rem !important;
  background-color: var(--surface6) !important;
  border-radius: 1.5rem !important;
  color: var(--text4) !important;
  line-height: 1.5rem;
  white-space: nowrap;

  &:hover {
    background-color: var(--text4) !important;
    color: var(--surface6) !important;
    text-decoration: none;

    strong, svg {
      color: var(--surface6) !important;
    }
  }

  svg:hover {
    color: var(--surface1) !important;
  }
}

// From Bootstrap scss/_variables.scss
.card-box-shadow {
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 0.25rem 0.37rem, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -0.18rem 0.31rem;
}

// Base Template

#content {
  width: 100%;
  min-height: 100vh;
  transition: all 0.3s;
}

// Use this to reveal hidden targets on-hover
.hover-reveal-target:hover {
  .hover-reveal-object {
    display: flex !important;
    height: var(--dropdown-height);
  }
}

// Dropdown Menus

.dropdown-menu {
  background-color: var(--surface6);
}

.dropdown:not(.top-drop-down) {
  min-width: var(--dropdown-height);
  min-height: var(--dropdown-height);
}

.hover-target:hover {
  .dropdown > div {
    display: flex !important;
  }
}

.dropdown-menu-container {
  height: var(--dropdown-height);
}

.dropdown-menu-container-width {
  width: 3.75rem;
}

.dropdown {
  .dropdown-menu {
    top: 0.6rem !important;
    transition: all 500ms cubic-bezier(0.53, 2, 0.36, 0.85);
  }
  li {
    margin-right: 0.5rem;
    margin-left: 0.5rem;
  }
}

.dropdown-item {
  border-radius: var(--border-radius1);
  color: var(--text1);

  span {
    svg {
      width: 1rem !important;
    }
  }

  &:hover {
    background-color: var(--surface2) !important;
    color: var(--text1);
  }
}

// Add this to any div that needs to be at least as tall
//  as the dropdown target, to avoid on-hover jitter
.dropdown-height {
  min-height: var(--dropdown-height);
}

// Extra content after the dropdown item's name
.dropdown-item-extra {
  width: 1.25rem;
  height: 1.25rem;
  padding-top: 0.25rem;
  background-color: var(--surface5);
  border-radius: 50%;
  color: var(--dropdown-item-extra-color);
  font-size: 0.75rem;
  font-weight: bold;
  line-height: 0.75rem;
  text-align: center;
}

.option-icon {
  display: flex;
  width: 2.5rem;
  min-width: 2.5rem;
  height: 2.5rem;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  font-size: 1.2rem;
  &:hover {
    background-color: var(--hover-bg);
    cursor: pointer;
    transform: translateY(-0.06rem);
  }
  &.enabled {
    background-color: var(--selected-bg);
  }
}

// The round, target point that spawns the dropdown menu below it
.dropdownmenu {
  display: flex;
  width: var(--dropdown-height);
  height: var(--dropdown-height);
  margin-left: auto; // Push to the right
  font-size: 1rem;

  &.calendar-date-format-menu {
    // If we add this class, don't push to the right
    margin-left: none;
  }

  &:hover {
    background-color: var(--hover-bg);
    border-radius: 100%;
  }
}

// Error pages

.response-code {
  margin-bottom: 2rem;
  font-size: 6.25rem;
  font-weight: bold;
}

// Login page

.login-body {
  background-image: url("/static/img/header_cyber.jpg");
  background-size: cover;
}

.jumbotron {
  width: 37.50rem;
  height: 43.75rem;
  border: 0.12rem solid var(--text1);
  border-radius: 1.5rem;
  opacity: 0.9;

  .input-group-text {
    background-color: var(--text4);
  };

  > div {
    background-image: url("/static/img/bordercore-logo-login.png");
    background-position: center -90px;
    background-repeat: no-repeat;
    background-size: 32rem 32rem;
  }

  form {
    top: 18.75rem;
    right: 4rem;

  }
}

// Help

#modal-body-help {
  h1 {
    color: var(--text5);
    font-size: 1rem;
    text-transform: uppercase;
  }
  strong {
    color: var(--text3);
  }
  em {
    color: var(--text-em);
  }
}

//
// Tables
//

.table {
  border-color: var(--surface6);
  color: var(--text1);

  th {
    color: $primary;
  }
}
/* ... */

